# softmax

./: .gitignore  README.md  exp_classification.py  exp_induction.py  pretrained.py  pyproject.toml
conf/: classification_config.yaml  induction_config.yaml
data/: README.md
src/: attention.py  datasets.py  model.py
sweeps/: classification.yaml  induction.yaml
visualizations/: classification.ipynb  classification_with_sample_tracking.ipynb  induction.ipynb  induction_save_attn_patterns.ipynb  pretrained.ipynb  toy_experiments.ipynb
visualizations/fig/: README.md
